# wiseup-hw

./: CMakeLists.txt  README.md
include/: CameraService.h  DHTSensor.h  FaceRecognitionService.h  GeneralTypes.h  GenericSensor.h  HTTPCurlProvider.h  IConnector.h  IProvider.h  ISensor.h  IService.h  MMALCameraService.h  PIRSensor.h  RESTApi.h  Streamer.h  UDSConnector.h  UnixDomainSocketProvider.h  uipc.h
src/: CMakeLists.txt  DHTSensor.cpp  FaceRecognitionService.cpp  GenericSensor.cpp  HTTPCurlProvider.cpp  IConnector.cpp  ISensor.cpp  IService.cpp  MMALCameraService.cpp  PIRSensor.cpp  RESTApi.cpp  Streamer.cpp  UDSConnector.cpp  hw-main.cpp  uipc.cpp
src/camera-mmal/: CMakeLists.txt  CustomRaspiStill.c  RaspiStill.c  RaspiStill.h  RaspiTex.h  test.c
src/streamer/: CMakeLists.txt  mjpg_streamer.c
src/streamer/include/: input.h  mjpg_streamer.h  output.h  utils.h
src/streamer/mjpg-streamer-www/: stream-test.html
src/streamer/plugins/: CMakeLists.txt
src/streamer/plugins/input_file/: CMakeLists.txt  input_file.c
src/streamer/plugins/output_http/: CMakeLists.txt  httpd.c  httpd.lo  output_http.c
